[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
reactivity-winit = { path = "crates/reactivity-winit" }
reactive = { path = "crates/reactive" }
reactivity = { path = "crates/reactivity" }
reactivity-macro = { path = "crates/reactivity-macro" }
