[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 or MIT"

[workspace.dependencies]
reactivity-winit = { path = "crates/reactivity-winit" }
reactive = { path = "crates/reactive" }
reactive-tree = { path = "crates/reactive-tree" }
reactive-event = { path = "crates/reactive-event" }
reactivity = { path = "crates/reactivity" }
reactivity-macro = { path = "crates/reactivity-macro" }
