[package]
name = "example-app"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
reactive = { workspace = true }
reactivity = { workspace = true }

winit = "0.30.9"
glutin-winit = "0.5.0"
pin-project = "1.1.9"
tokio = { version = "1.43.0", features = ["full"] }
skia-safe = { version = "0.81.0" }
futures-lite = "2.6.0"
