[package]
name = "example-app"
version.workspace = true
edition.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
license.workspace = true

[dependencies]
reactivity.workspace = true
reactivity-winit.workspace = true
reactive.workspace = true
reactive-widgets.workspace = true

winit = "0.30.9"
glutin-winit = "0.5.0"
pin-project = "1.1.9"
tokio = { version = "1.43.0", features = ["full"] }
skia-safe = "0.81.0"
futures = "0.3.31"
rand = "0.9.0"
