[package]
name = "reactive"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[features]
no-std = []

[dependencies]
reactivity = { workspace = true }

never-say-never = "6.6.666"
pin-project = "1.1.9"
waker-fn = "1.2.0"
winit = "0.30.8"
scoped-tls-hkt = "0.1.5"