[package]
name = "reactive"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
no-std = []

[dependencies]
reactivity = { workspace = true }

never-say-never = "6.6.666"
pin-project = "1.1.9"
waker-fn = "1.2.0"
winit = "0.30.9"
scoped-tls-hkt = "0.1.5"
skia-safe = { version = "0.81.0", features = ["gl"] }
glutin = "0.32.2"
glutin-winit = "0.5.0"
gl = "0.14.0"
derive_more = { version = "2.0.1", features = ["full"] }
taffy = { version = "0.7.5", default-features = false, features = ["flexbox"] }
