[package]
name = "reactive"
version.workspace = true
edition.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
license.workspace = true

[dependencies]
reactivity.workspace = true
reactivity-winit.workspace = true

pin-project = "1.1.9"
taffy = "0.7.5"
skia-safe = { version = "0.81.0", features = ["gl"] }
derive_more = { version = "2.0.1", features = ["full"] }
glutin = "0.32.2"
glutin-winit = "0.5.0"
gl = "0.14.0"
scopeguard = "1.2.0"
easy-ext = "1.0.2"
