[package]
name = "reactivity"
version.workspace = true
edition.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
license.workspace = true

[features]
default = ["macros"]
macros = ["reactivity-macro"]

[dependencies]
reactivity-macro = { workspace = true, optional = true }

derive_more = { version = "2.0.1", default-features = false, features = [
    "deref",
    "deref_mut",
    "debug",
] }
pinned-aliasable = "0.1.3"
pin-project = "1.1.9"
noop-waker = "0.1.0"

[dev-dependencies]
pollster = "0.4.0"
