[package]
name = "reactivity"
description = "True zero cost fine grained reactivity system"
version.workspace = true
edition.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
license.workspace = true

[features]
default = ["macros"]
macros = ["reactivity-macro"]

[dependencies]
reactivity-macro = { workspace = true, optional = true }

pin-project = "1.1.9"
hkt-pin-list = "0.2.0"

[dev-dependencies]
pollster = "0.4.0"
scoped-tls-hkt = "0.1.5"
derive_more = { version = "2.0.1", features = ["full"] }
