[package]
name = "counter"
publish = false
version.workspace = true
edition.workspace = true
authors = ["storycraft <storycraft@pancake.sh>"]
license.workspace = true

[dependencies]
reactivity.workspace = true
reactivity-winit.workspace = true
reactive.workspace = true

pin-project = "1.1.9"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
rand = "0.9.0"
